--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@charkour/react-reactions": "^0.11.0",
     "axios": "^1.7.2",
+    "chat-app": "file:..",
     "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.10.0",
     "jwt-decode": "^4.0.0",
