--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "server": "nodemon backend/server.js",
     "start":"node backend/server.js",
-    "build":"npm isntall && npm install --prefix frontend && npm run build --prefix frontend"
+    "build":"npm isntall"
   },
   "type": "module",
   "keywords": [],
